<resources>
    <string name="app_name">AppST5v1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="profile">Profil</string>
    <string name="menu_profile">Profil</string>
    <string name="patient">Patient</string>
    <string name="doctor">Médecin</string>
    <string name="Accueil">Salut à toi jeune diabétique</string>
    <string name="password">mot de passe</string>
    <string name="pseudo">pseudo</string>
    <string name="connect">connexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistique">Statistiques</string>
    <string name="menu_statistiques">Statistiques</string>
    <string name="callMe">Appel</string>
    <string name="proches">Proches</string>
    <string name="dark_mode">Sombre</string>
    <string name="light_mode">Claire</string>

    <string name="errorCon">Erreur de communication avec le server (internet ?)</string>
    <string name="wrongEmail">Le mot de passe ou l\'adresse email est incorrect.</string>
    <string name="profile_dont_load">Le profile ne charge pas</string>
    <string name="doctor_dont_load">Le profile du médecin ne charge pas.</string>
    <string name="stats_dont_load">Les données ne chargent pas.</string>
    <string name="aucun_proche">Aucun proche.</string>
</resources>