<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_statistiques"
            android:icon="@drawable/stats"
            android:title="@string/menu_statistiques" />

        <item
            android:id="@+id/nav_proche"
            android:icon="@drawable/proches"
            android:title="@string/proches" />

        <item
            android:id="@+id/nav_doctor"
            android:icon="@drawable/doctor"
            android:title="@string/doctor" />

    </group>
</menu>