<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.appst5v1.ui.profile.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/nav_statistiques"
        android:name="com.example.appst5v1.ui.statistiques.StatistiquesFragment"
        android:label="@string/menu_statistiques"
        tools:layout="@layout/statistiques_fragment" />


    <fragment
        android:id="@+id/nav_proche"
        android:name="com.example.appst5v1.ui.proche.ProcheFragment"
        android:label="@string/proches"
        tools:layout="@layout/proche_fragment" />



</navigation>